# SkyFi-MCP-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  MCP-Development-Philosophy.md  README.md  archive-debug-report.md  entrypoint.sh  nginx.conf  order-tasking-debug-report.md   partial-failure-explanation.md  pyproject.toml  smithery.yaml
.github/workflows/: test-suite.yml
PRD/: API-spec-checklist.md  API-tool-implementation.md  dep-checklist.md  dev-checklist.md  doc-checklist.md  docker-kub-config-checklist.md
docs/: README.md  aoi-guide.md  archives.md  auth-database-schemas.md  auth-middleware-implementation.md  auth-service-configurations.md  authentication-architecture.md  authentication.md  core-endpoints.md  delivery-config.md  example-workflow.md  feasibility.md  notifications.md  ordering.md  pricing.md  service-client-patterns.md  service-config-templates.md  service-layer-architecture.md  service-mounting-injection.md  tool-organization-domains.md  unified-architecture-specification.md  webhooks.md
docusaurus/: docusaurus.config.js  package-lock.json  sidebars.js
docusaurus/docs/: intro.md
docusaurus/docs/getting-started/: _category_.json  installation.md  quick-start.md  verification.md
docusaurus/docs/setup/: _category_.json  claude-desktop.md  cursor-ai.md  overview.md  vscode.md  windsurf.md
docusaurus/docs/technical/: mcp-protocol.md
docusaurus/docs/tools/: _category_.json  overview.md
docusaurus/docs/tools/osm/: _category_.json  overview.md
docusaurus/docs/tools/skyfi/: _category_.json  overview.md
docusaurus/src/components/HomepageFeatures/: index.js
docusaurus/src/css/: custom.css
docusaurus/src/pages/: index.js
memory/agents/: README.md
memory/sessions/: README.md
src/mcp_skyfi/: __init__.py  __main__.py  exceptions.py
src/mcp_skyfi/middleware/: auth.py  oauth21.py  oauth_discovery.py
src/mcp_skyfi/models/: base.py
src/mcp_skyfi/models/skyfi/: __init__.py  archive.py  order.py  user.py
src/mcp_skyfi/osm/: __init__.py  config.py  geocoding.py  geometry.py  places.py
src/mcp_skyfi/servers/: context.py  dependencies.py  main.py
src/mcp_skyfi/skyfi/: __init__.py  archives.py  authentication.py  client.py  config.py  constants.py  dependencies.py  factory.py  factory_integration_example.py  feasibility.py  notifications.py  ordering.py  pricing.py
src/mcp_skyfi/utils/: environment.py  logging.py  networking.py
src/mcp_skyfi/weather/: __init__.py  alerts.py  conditions.py  config.py  forecasts.py
tests/: README.md  conftest.py  debug_services.py  debug_tools.py  fix_tools.py  quality_gates.py  run_server.py  security_audit_penetration_test.py  simple_mcp_test.py  test_comprehensive_auth.py  test_context_enhancement.py  test_cursor_mcp.py  test_final.py  test_http.py  test_mcp.py  test_mcp_debug.py  test_mcp_init.py  test_mcp_proper.py  test_mcp_session.py  test_mcp_tools.py  test_oauth21_compliance.py  test_performance_benchmarks.py  test_security_validation.py  test_skyfi_factory.py  test_stdio_simple.py  test_studio_fixed.py
tests/fixtures/: auth_mock.py  credential_mocks.py  external_mocks.py
tests/integration/auth/: test_client_credentials.py  test_multi_auth.py
tests/mcp_protocol/: test_auth_compliance.py  test_compliance.py
tests/performance/: test_benchmarks.py  test_credential_performance.py
tests/security/: test_credential_security.py  test_vulnerabilities.py
