[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-skyfi"
version = "0.1.0"
description = "Enterprise-ready MCP server for SkyFi satellite imagery, OpenStreetMap, and weather data"
authors = [
    {name = "SkyFi MCP Team", email = "dev@skyfi.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.3.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.0.0",
    "starlette>=0.35.0",
    "uvicorn[standard]>=0.27.0",
    "cachetools>=5.3.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "shapely>=2.0.0",
    "geojson>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
security = [
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "authlib>=1.2.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
]
redis = [
    "redis>=4.6.0",
    "hiredis>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/skyfi/mcp-skyfi"
Repository = "https://github.com/skyfi/mcp-skyfi"
Documentation = "https://skyfi.github.io/mcp-skyfi"
Changelog = "https://github.com/skyfi/mcp-skyfi/blob/main/CHANGELOG.md"

[project.scripts]
mcp-skyfi = "mcp_skyfi:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_skyfi"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mcp_skyfi"]

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cachetools.*",
    "structlog.*",
    "geojson.*",
    "shapely.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (may hit external APIs)",
    "security: marks tests as security tests (vulnerability scanning)",
    "performance: marks tests as performance tests (benchmarking)",
    "mcp: marks tests as MCP protocol compliance tests",
    "slow: marks tests as slow running tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/mcp_skyfi"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_other (common in tests)

# Pre-commit hooks configuration
[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # flake8-bandit
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without an explicit strict parameter
    "S101",  # use of assert detected (common in tests)
]
unfixable = [
    "B",  # avoid removing unused variables
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "S106", "S311"]  # Allow assert, hardcoded passwords, and random for tests